k8s/network-policies/jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-and-agents
  namespace: jenkins
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jenkins-build
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 50000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-deploy
  namespace: jenkins
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-front
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-back
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-reader
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault
      ports:
        - protocol: TCP
          port: 8200
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-controller-git
  namespace: jenkins
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 443
