k8s/network-policies/kafka.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-operator
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kafka-operator
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-apps
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-front
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-back
      ports:
        - protocol: TCP
          port: 9093
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-internal
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              strimzi.io/cluster: demo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-internal
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: demo
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              strimzi.io/cluster: demo
