k8s/network-policies/postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-operator
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: demo-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-apps
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: demo-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-back
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: demo-reader
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-internal
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: demo-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: demo-pg
